hphp/test/slow/hhbbc/uninstantiable-enum2.php.expectf
Fatal error: Undefined enum: Bar in %s/uninstantiable-enum2.php on line 5
